[gd_scene load_steps=7 format=1]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Brick.tscn" type="PackedScene" id=2]
[ext_resource path="res://CamMove.gd" type="Script" id=3]
[ext_resource path="res://TopMenu.gd" type="Script" id=4]
[ext_resource path="res://LoadFile.gd" type="Script" id=5]

[sub_resource type="Environment" id=1]

ambient_light/enabled = true
ambient_light/color = Color( 1, 1, 1, 1 )
ambient_light/energy = 0.2
fxaa/enabled = false
background/mode = 1
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[node name="Mahjong" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )
brick = ExtResource( 2 )
layout = "\n\n  X\n-\n\n XXX\n  X\n XXX\n\n-\nXXXXX\nXXXXX\n XXX\nXXXXX\nXXXXX\n-\n\n XXX\n  X\n XXX\n"
pick_length = 100.0

[node name="Bricks" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Y_rot" type="Spatial" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 3 )
mouse_acceleration = 10.0
x_rot = -30.0
y_rot = -70.0
distance = 10
zoom_modifier = 0.95

[node name="X_rot" type="Spatial" parent="Y_rot"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Y_rot/X_rot"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 1 )

[node name="Lights" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.9517, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="Lights"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.87747, -0.241477, -0.414409, 0.479088, 0.482401, 0.733324, 0.0228309, -0.842009, 0.538981, 0, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="DirectionalLight1" type="DirectionalLight" parent="Lights"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.87747, 0.241477, 0.41441, 0.479088, -0.482401, -0.733325, 0.0228309, 0.842009, -0.538981, 0, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 0.3
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="Control" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="Panel" type="Panel" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 2.0
margin/right = 2.0
margin/bottom = 2.0
alignment = 0
script/script = ExtResource( 4 )

[node name="New Game" type="Button" parent="Control/Panel/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 82.0
margin/bottom = 36.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New Game"
flat = false

[node name="Load File" type="Button" parent="Control/Panel/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 86.0
margin/top = 0.0
margin/right = 155.0
margin/bottom = 36.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load File"
flat = false

[node name="Shuffle" type="Button" parent="Control/Panel/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 159.0
margin/top = 0.0
margin/right = 214.0
margin/bottom = 36.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Shuffle"
flat = false

[node name="TilesLeft" type="Label" parent="Control/Panel/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 218.0
margin/top = 11.0
margin/right = 301.0
margin/bottom = 25.0
text = "999 Tiles left"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CurrentPossibilities" type="Label" parent="Control/Panel/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 305.0
margin/top = 11.0
margin/right = 422.0
margin/bottom = 25.0
text = "| 999 possibilities"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FileDialog" type="FileDialog" parent="Control"]

process/pause_mode = 2
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 100.0
margin/right = 100.0
margin/bottom = 100.0
popup/exclusive = false
window/title = "Open a File"
dialog/text = "Choose your level file"
dialog/hide_on_ok = false
mode = 0
access = 2
filters = StringArray( "*.txt" )
show_hidden_files = false
script/script = ExtResource( 5 )


